--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,6 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.jcalendar-1.4.jar=D:\\Coding\\Java\\ERP-UI\\ERP-UI\\dist\\lib\\jcalendar-1.4.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\fox70\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\asus\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
